make it so there can be troops up to tier 10

--- a/Main/LOTRAOM.csproj
+++ b/Main/LOTRAOM.csproj
@@ -105,4 +105,8 @@
     <None Include="_Module\ModuleData\project.mbproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CampaignBehaviors\" />
+  </ItemGroup>
+
 </Project>
