--- a/Main/LOTRAOM.csproj
+++ b/Main/LOTRAOM.csproj
@@ -88,6 +88,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bannerlord.MCM" Version="5.10.2" />
     <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageReference Include="IsExternalInit" Version="1.0.3" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageReference Include="Bannerlord.BuildResources" Version="1.1.0.104" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
